# Android-OpenCLGraphics

./: README.md  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/copycat/matting/: ExampleInstrumentedTest.java
app/src/main/: AndroidManifest.xml
app/src/main/assets/kernels/: matting.cl  matting_improved.cl  test.cl
app/src/main/cpp/: CMakeLists.txt  native-lib.cpp
app/src/main/cpp/common/: image_reader.cpp  image_reader.h
app/src/main/cpp/common/utils/: native_debug.h
app/src/main/cpp/csparse/: Android.mk  CMakeLists.txt
app/src/main/cpp/csparse/include/: csparse.h
app/src/main/cpp/csparse/src/: csparse.c
app/src/main/java/com/copycat/matting/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
app/src/test/java/com/copycat/matting/: ExampleUnitTest.java
gradle/wrapper/: gradle-wrapper.properties
